# automation-final-project

./: README.md  pyproject.toml
pages/: base_page.py  index_page.py  index_page_locators.py
pages/cart/: cart_page.py  cart_page_locators.py  cart_success_page.py  cart_success_page_locators.py
pages/login/: login_page.py  login_page_locators.py  login_success_page.py  login_success_page_locators.py
pages/search/: search_page.py  search_page_locators.py  search_success_page.py  search_success_page_locators.py
resources/: constans.py
tests/: conftest.py  test_cart.py  test_cases.py  test_login.py  test_search.py
