[tool.poetry]
name = "automation-final-project"
version = "0.1.0"
description = ""
authors = ["Mayu Suzumura <47727645+mayupaca@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
